Fixed a number of ux issues... - Vertical wobble of content in add app dialog when route is entered/removed - Alignment of label in input text and search box fields including log in page - Alignment of checkbox in register endpoint form

--- a/components/app-framework/src/widgets/search-box/search-box.scss
+++ b/components/app-framework/src/widgets/search-box/search-box.scss
@@ -22,7 +22,7 @@ search-box {
 
   input {
     flex: 1 1 0px;
-    margin-top: #{$line-height-computed - $font-size-base};
+    margin-top: $console-form-margin-top;
 
     &:hover,
     &:focus,
