--- a/components/cloud-foundry/src/view/applications/workflows/add-app-workflow/add-app-workflow.scss
+++ b/components/cloud-foundry/src/view/applications/workflows/add-app-workflow/add-app-workflow.scss
@@ -13,4 +13,5 @@ add-app-workflow {
   color: $gray-darker;
   background: none;
   word-wrap: break-word;
+  line-height: 1;
 }
