--- a/components/suse-branding/src/login.scss
+++ b/components/suse-branding/src/login.scss
@@ -76,6 +76,7 @@ $login-label-color: #e0e0e0;
             .control-label {
               color: $login-label-color;
               font-size: 14px;
+              margin-top: 3px;
             }
 
             &.focus {
